--- a/register.html
+++ b/register.html
@@ -29,6 +29,7 @@
       box-shadow: 0 6px 32px rgba(0, 0, 0, 0.4);
       max-width: 400px;
       width: 100%;
+      position: relative;
     }
     .box h2 {
       text-align: center;
@@ -88,13 +89,15 @@
       margin-bottom: 12px;
       font-size: 0.95rem;
     }
+
     #strength-bar {
       width: 100%;
-      height: 8px;
-      background: #444;
+      background: #333;
       border-radius: 4px;
       margin-bottom: 10px;
+      height: 8px;
       overflow: hidden;
+      display: none;
     }
     #strength-fill {
       height: 100%;
@@ -104,6 +107,7 @@
     #requirements {
       font-size: 0.85rem;
       margin-bottom: 12px;
+      display: none;
     }
     #requirements li {
       list-style: none;
@@ -117,6 +121,16 @@
       content: "✖ ";
       color: #f87171;
     }
+    .eye-icon {
+      position: absolute;
+      right: 12px;
+      top: calc(50% + 40px);
+      transform: translateY(-50%);
+      cursor: pointer;
+      font-size: 18px;
+      color: #555;
+      user-select: none;
+    }
   </style>
 </head>
 <body>
@@ -126,12 +140,17 @@
       <div id="error"></div>
       <input type="text" id="username" placeholder="Tên đăng nhập" required>
       <input type="email" id="email" placeholder="Email" required>
-      <input type="password" id="password" placeholder="Mật khẩu" required oninput="updateStrength()">
+
+      <div style="position: relative;">
+        <input type="password" id="password" placeholder="Mật khẩu" required
+          oninput="updateStrength()" onfocus="showStrengthUI()" onblur="hideStrengthUI()">
+        <span class="eye-icon"
+          onmousedown="revealPassword()" onmouseup="hidePassword()" onmouseleave="hidePassword()">👁</span>
+      </div>
 
       <div id="strength-bar">
         <div id="strength-fill"></div>
       </div>
-
       <ul id="requirements">
         <li id="length" class="not-met">Tối thiểu 8 ký tự</li>
         <li id="lowercase" class="not-met">Chứa chữ thường</li>
@@ -141,15 +160,10 @@
 
       <input type="password" id="confirmPassword" placeholder="Nhập lại mật khẩu" required>
 
-      <label class="show-password">
-        <input type="checkbox" onclick="togglePassword()"> Hiển thị mật khẩu
-      </label>
-
       <button onclick="register()">Đăng ký</button>
       <div class="link">Đã có tài khoản? <a href="login.html">Đăng nhập</a></div>
     </div>
   </main>
-
   <div id="footer"></div>
 
   <script>
@@ -187,26 +201,19 @@
       }
     }
 
-    function togglePassword() {
-      const pw = document.getElementById('password');
-      const cpw = document.getElementById('confirmPassword');
-      const type = pw.type === "password" ? "text" : "password";
-      pw.type = cpw.type = type;
+    function revealPassword() {
+      document.getElementById('password').type = 'text';
+      document.getElementById('confirmPassword').type = 'text';
     }
 
-    function isStrong(pw) {
-      return (
-        pw.length >= 8 &&
-        /[a-z]/.test(pw) &&
-        /[A-Z]/.test(pw) &&
-        /\d/.test(pw)
-      );
+    function hidePassword() {
+      document.getElementById('password').type = 'password';
+      document.getElementById('confirmPassword').type = 'password';
     }
 
     function updateStrength() {
       const pw = document.getElementById('password').value;
       const fill = document.getElementById('strength-fill');
-
       let strength = 0;
       if (pw.length >= 8) strength++;
       if (/[a-z]/.test(pw)) strength++;
@@ -216,7 +223,6 @@
       fill.style.width = (strength / 4) * 100 + "%";
       fill.style.background = ["#f87171", "#fbbf24", "#facc15", "#4ade80"][strength - 1] || "#444";
 
-      // Cập nhật yêu cầu
       updateRequirement('length', pw.length >= 8);
       updateRequirement('lowercase', /[a-z]/.test(pw));
       updateRequirement('uppercase', /[A-Z]/.test(pw));
@@ -226,6 +232,18 @@
     function updateRequirement(id, met) {
       const item = document.getElementById(id);
       item.className = met ? "met" : "not-met";
+    }
+
+    function showStrengthUI() {
+      document.getElementById('strength-bar').style.display = 'block';
+      document.getElementById('requirements').style.display = 'block';
+    }
+
+    function hideStrengthUI() {
+      setTimeout(() => {
+        document.getElementById('strength-bar').style.display = 'none';
+        document.getElementById('requirements').style.display = 'none';
+      }, 150);
     }
 
     fetch('footer.html')
