--- a/register.html
+++ b/register.html
@@ -115,16 +115,23 @@
       content: "✖ ";
       color: #f87171;
     }
+
+    /* Căn chỉnh biểu tượng mắt */
     .eye-icon {
       position: absolute;
       right: 12px;
-      top: 50%;
-      transform: translateY(-50%);
+      top: 0;
+      bottom: 0;
+      margin: auto;
+      height: 20px;
+      display: flex;
+      align-items: center;
       cursor: pointer;
       font-size: 18px;
       color: #555;
       user-select: none;
     }
+
   </style>
 </head>
 <body>
