--- a/register.html
+++ b/register.html
@@ -161,13 +161,9 @@
         <li id="number" class="not-met">Chứa số</li>
       </ul>
 
-      <!-- Nhập lại mật khẩu -->
+      <!-- Nhập lại mật khẩu (Không có biểu tượng mắt) -->
       <div style="position: relative;">
         <input type="password" id="confirmPassword" placeholder="Nhập lại mật khẩu" required>
-        <span class="eye-icon" data-target="confirmPassword"
-          onmousedown="revealPassword(this)" 
-          onmouseup="hidePassword(this)" 
-          onmouseleave="hidePassword(this)">👁</span>
       </div>
 
       <button onclick="register()">Đăng ký</button>
