--- a/mini-header.html
+++ b/mini-header.html
@@ -43,12 +43,20 @@
   }
 
   const token = localStorage.getItem('token');
-  if (token) {
+
+  if (!token) {
+    // ⛔ Nếu không có token, ép quay về login
+    window.location.href = 'login.html';
+  } else {
     try {
       const payload = JSON.parse(atob(token.split('.')[1]));
-      document.getElementById('username-display').textContent = payload.username;
+      if (payload.username) {
+        document.getElementById('username-display').textContent = payload.username;
+      }
     } catch (e) {
       console.error("Lỗi khi giải mã token", e);
+      // Nếu token lỗi thì cũng điều hướng về login
+      window.location.href = 'login.html';
     }
   }
 </script>
