--- a/tailieu.html
+++ b/tailieu.html
@@ -7,30 +7,27 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;400&display=swap" rel="stylesheet" />
   <style>
     :root { --main: #185adb; }
-
     html, body {
-      height: 100%; margin: 0; padding: 0;
+      height: 100%;
+      margin: 0; padding: 0;
       font-family: 'Montserrat', Arial, sans-serif;
       background: radial-gradient(ellipse at 60% 40%, #233d61 0%, #0a1931 100%);
       display: flex; flex-direction: column;
       overflow-x: hidden;
     }
-
     main {
       flex: 1 0 auto;
       width: 100vw;
       display: flex; flex-direction: column;
       z-index: 2;
     }
-
     #star-canvas {
       position: fixed;
-      top: 0; left: 0;
+      left: 0; top: 0;
       width: 100vw; height: 100vh;
       z-index: 0;
       pointer-events: none;
     }
-
     #mouse-light {
       position: fixed;
       top: 0; left: 0;
@@ -41,42 +38,54 @@
       background: radial-gradient(circle, #86bcff44 0%, #fff0 80%);
       mix-blend-mode: lighten;
       z-index: 10;
-      transition: background 0.22s;
     }
-
+    .mini-header {
+      display: flex; align-items: center;
+      background: #fff; box-shadow: 0 1px 8px #185adb09;
+      height: 47px; padding: 0 15px;
+      border-bottom: 1.2px solid #e3e9f7;
+      position: sticky; top: 0; z-index: 30;
+      justify-content: space-between;
+    }
+    .mini-title {
+      font-weight: 700;
+      font-size: 1.05rem;
+      color: #185adb;
+    }
+    .logout-btn {
+      background: linear-gradient(90deg,#3a7bd5,#4a90e2);
+      color: #fff; border: none;
+      border-radius: 6px;
+      padding: 6px 12px;
+      font-weight: 600;
+      cursor: pointer;
+      font-size: 0.92rem;
+    }
+    .logout-btn:hover {
+      background: linear-gradient(90deg,#4a90e2,#3a7bd5);
+    }
     .doc-main {
       position: relative;
-      z-index: 2;
       max-width: 430px;
-      margin: 80px auto 60px;
+      margin: 80px auto;
       background: rgba(18,32,67,0.96);
       border-radius: 26px;
-      box-shadow: 0 6px 32px #12204385, 0 1px 4px #185adb09;
-      padding: 38px 28px 34px;
+      box-shadow: 0 6px 32px #12204385;
+      padding: 38px 28px;
       display: flex; flex-direction: column; align-items: center;
-      animation: fadein 1s ease;
       backdrop-filter: blur(2.5px);
     }
-
     .doc-title {
       font-size: 2rem;
       font-weight: 800;
       color: #63aaff;
       margin-bottom: 34px;
-      letter-spacing: 1.2px;
       text-align: center;
-      text-shadow: 0 2px 12px #185adb34;
     }
-
-    @keyframes fadein {
-      from {opacity: 0; transform: translateY(24px);}
-      to {opacity: 1; transform: none;}
-    }
-
     .doc-btn-group {
-      display: flex; flex-direction: column; gap: 28px; width: 100%; margin-top: 8px;
+      display: flex; flex-direction: column;
+      gap: 28px; width: 100%;
     }
-
     .doc-btn {
       display: flex; align-items: center; justify-content: center;
       gap: 14px; padding: 20px 0;
@@ -84,77 +93,46 @@
       font-size: 1.22rem; font-weight: 700;
       color: #fff; cursor: pointer;
       width: 100%;
-      background: linear-gradient(92deg, #3864e6 15%, #2fc2ea 85%);
-      box-shadow: 0 4px 18px #13204334, 0 1.5px 7px #119caa17;
       text-decoration: none;
-      transition: transform 0.18s, box-shadow 0.18s, filter 0.17s;
-      opacity: 0; animation: fadebtn 0.9s ease forwards;
+      background: linear-gradient(92deg, #3864e6 15%, #2fc2ea 85%);
+      box-shadow: 0 4px 18px #13204334;
+      transition: transform 0.18s, box-shadow 0.18s;
     }
-
-    .doc-btn:nth-child(1) {animation-delay: .2s;}
-    .doc-btn:nth-child(2) {animation-delay: .44s;}
-    .doc-btn:nth-child(3) {animation-delay: .67s;}
-
-    @keyframes fadebtn {
-      from {opacity: 0; transform: translateY(32px) scale(.97);}
-      to {opacity: 1; transform: none;}
-    }
-
     .doc-btn.epu     { background: linear-gradient(90deg, #3864e6 18%, #2fc2ea 100%); }
     .doc-btn.english { background: linear-gradient(90deg, #d6a23f 18%, #ff5c85 90%); }
     .doc-btn.tmu     { background: linear-gradient(90deg, #34ca7a 10%, #3ebea7 100%); }
     .doc-btn.soon    { background: linear-gradient(90deg, #35ca7a 10%, #3ebea6 100%); }
-
     .doc-btn .icon {
-      margin-right: 10px; font-size: 1.35em;
-      filter: drop-shadow(0 1px 4px #185adb23);
+      font-size: 1.3rem;
     }
-
-    .doc-btn:hover {
-      transform: scale(1.045) translateY(-2px);
-      filter: brightness(1.13) drop-shadow(0 8px 20px #6dcfff44);
-      box-shadow: 0 14px 36px #263d63bb, 0 2.5px 8px #23bfae11;
-    }
-
-    .doc-btn:active {
-      transform: scale(0.96) translateY(1px);
-      filter: brightness(0.97);
-    }
-
-    @media (max-width: 600px) {
-      .doc-main { padding: 10px 3px 25px; max-width: 98vw; }
-      .doc-title { font-size: 1.22rem; }
-      .doc-btn { font-size: 1.05rem; }
-    }
-
     footer {
       background: #122043;
       color: #8ebeff;
       text-align: center;
-      padding: 26px 10px 16px;
+      padding: 20px 10px;
       font-size: 1.08rem;
       margin-top: 40px;
       border-radius: 22px 22px 0 0;
-      letter-spacing: .22px;
-      box-shadow: 0 -3px 22px #0a193112;
     }
   </style>
 </head>
 <body>
-  <!-- Nền -->
   <canvas id="star-canvas"></canvas>
   <div id="mouse-light"></div>
 
-  <!-- Nhúng header -->
-  <div id="header-placeholder"></div>
+  <!-- HEADER -->
+  <header class="mini-header">
+    <span class="mini-title">Xin chào, <span id="username-display">...</span></span>
+    <button class="logout-btn" onclick="logout()">Đăng xuất</button>
+  </header>
 
   <main>
     <div class="doc-main">
       <div class="doc-title">Tài liệu học tập</div>
       <div class="doc-btn-group">
-        <a href="#" class="doc-btn epu"><span class="icon">📚</span> Tài liệu EPU</a>
-        <a href="#" class="doc-btn english"><span class="icon">🇬🇧</span> Tài liệu Tiếng Anh</a>
-        <a href="#" class="doc-btn tmu"><span class="icon">🏛️</span> Tài liệu TMU</a>
+        <a href="https://..." target="_blank" class="doc-btn epu"><span class="icon">📚</span> Tài liệu EPU</a>
+        <a href="https://..." target="_blank" class="doc-btn english"><span class="icon">🇬🇧</span> Tài liệu Tiếng Anh</a>
+        <a href="https://..." target="_blank" class="doc-btn tmu"><span class="icon">🏛️</span> Tài liệu TMU</a>
         <a href="#" class="doc-btn soon"><span class="icon">⏳</span> Soon</a>
         <a href="#" class="doc-btn soon"><span class="icon">⏳</span> Soon</a>
       </div>
@@ -163,48 +141,47 @@
 
   <footer id="footer"></footer>
 
-  <!-- Script -->
   <script>
-    // Nhúng header
-    fetch('mini-header.html')
-      .then(res => res.text())
-      .then(html => {
-        document.getElementById('header-placeholder').innerHTML = html;
-
-        // ✅ Gán lại sự kiện click cho nút đăng xuất
-        const logoutBtn = document.querySelector('.logout-btn');
-        if (logoutBtn) {
-          logoutBtn.addEventListener('click', () => {
-            localStorage.removeItem('token');
-            window.location.href = 'login.html';
-          });
+    // Bảo vệ đăng nhập
+    const token = localStorage.getItem('token');
+    if (!token) {
+      window.location.href = "login.html";
+    } else {
+      fetch("https://login-backend-pg7j.onrender.com/protected", {
+        headers: { "Authorization": "Bearer " + token }
+      })
+      .then(res => {
+        if (!res.ok) {
+          localStorage.removeItem('token');
+          window.location.href = "login.html";
         }
       });
+    }
 
-    // Nhúng footer
-    fetch('footer.html')
-      .then(res => res.text())
-      .then(html => {
-        document.getElementById('footer').innerHTML = html;
-      });
+    // Giải mã token để lấy username
+    try {
+      const payload = JSON.parse(atob(token.split('.')[1]));
+      const username = payload?.username || "Khách";
+      document.getElementById("username-display").textContent = username;
+    } catch (e) {
+      console.error("Token lỗi:", e);
+      window.location.href = "login.html";
+    }
 
-    // Sao tĩnh
+    function logout() {
+      localStorage.removeItem("token");
+      window.location.href = "login.html";
+    }
+
+    // Hiệu ứng nền
     const canvas = document.getElementById('star-canvas');
     const ctx = canvas.getContext('2d');
     let w = window.innerWidth, h = window.innerHeight;
     canvas.width = w; canvas.height = h;
-
     let stars = [];
     for (let i = 0; i < (w > 900 ? 140 : 70); i++) {
-      stars.push({
-        x: Math.random() * w,
-        y: Math.random() * h,
-        r: Math.random() * 1.3 + 0.3,
-        o: Math.random() * 0.5 + 0.4,
-        speed: Math.random() * 0.08 + 0.04
-      });
+      stars.push({ x: Math.random()*w, y: Math.random()*h, r: Math.random()*1.3+0.3, o: Math.random()*0.5+0.4, speed: Math.random()*0.08+0.04 });
     }
-
     function animateStars() {
       ctx.clearRect(0, 0, w, h);
       for (let s of stars) {
@@ -222,19 +199,13 @@
     }
     animateStars();
 
-    // Chuột sáng
     const mouseLight = document.getElementById('mouse-light');
     document.addEventListener('mousemove', (e) => {
       mouseLight.style.left = e.clientX + 'px';
       mouseLight.style.top = e.clientY + 'px';
       mouseLight.style.opacity = 1;
     });
-    document.addEventListener('mouseleave', () => {
-      mouseLight.style.opacity = 0;
-    });
-    document.addEventListener('mouseenter', () => {
-      mouseLight.style.opacity = 1;
-    });
+    document.addEventListener('mouseleave', () => { mouseLight.style.opacity = 0; });
   </script>
 </body>
 </html>
