--- a/chat-ai.html
+++ b/chat-ai.html
@@ -1,3 +1,22 @@
+<script>
+const token = localStorage.getItem('token');
+if (!token) {
+  window.location.href = "login.html";
+} else {
+  fetch("https://login-backend-pg7j.onrender.com/protected", {
+    headers: { "Authorization": "Bearer " + token }
+  })
+  .then(res => {
+    if (!res.ok) {
+      localStorage.removeItem('token');
+      window.location.href = "login.html";
+    }
+  });
+}
+</script>
+
+
+
 <!DOCTYPE html>
 <html lang="vi">
 <head>
