--- a/chat-ai.html
+++ b/chat-ai.html
@@ -1,7 +1,3 @@
-
-
-
-
 <!DOCTYPE html>
 <html lang="vi">
 <head>
@@ -29,7 +25,7 @@
       display: flex; flex-direction: column;
     }
     /* Header mini */
-      .mini-header {
+    .mini-header {
       display: flex; align-items: center;
       background: #fff; box-shadow: 0 1px 8px #185adb09;
       height: 47px; min-height: 40px; padding: 0 15px 0 7px;
@@ -167,15 +163,12 @@
   </style>
 </head>
 <body>
-<div id="header-placeholder"></div>
-<script>
-  fetch('mini-header.html')
-    .then(res => res.text())
-    .then(html => {
-      document.getElementById('header-placeholder').innerHTML = html;
-    });
-</script>
-
+  <header class="mini-header">
+    <button class="home-btn" onclick="window.location.href='index.html'" title="Trang chủ">
+      <img src="logo.png" alt="Trang chủ">
+    </button>
+    <span class="mini-title">Tra Cứu Học Thuật & AI</span>
+  </header>
   <main>
     <div style="display:flex;align-items:center;justify-content:space-between;padding:10px 0 0 0;gap:12px;">
       <div style="font-weight:700;font-size:1.05rem;color:#185adb;margin-left:24px;display:flex;align-items:center;gap:7px">
@@ -391,18 +384,7 @@ function switchMode(mode) {
         document.querySelectorAll('.chat-messages').forEach(box=>{box.scrollTop = box.scrollHeight+77;});
       }, 80);
     }
-window.onload = ()=>{renderApiBtns('chatbase');}
-</script>
-
-<!-- ✅ Gán lại hàm logout sau khi header được fetch -->
-<script>
-  function logout() {
-    localStorage.removeItem('token');
-    window.location.href = 'login.html';
-  }
-</script>
-</body>
-</html>
-
+    window.onload = ()=>{renderApiBtns('chatbase');}
+  </script>
 </body>
 </html>
